Add Azure DLT asset creation prompt for credit card and fee data

--- a/dagster_university/dagster_and_etl/pyproject.toml
+++ b/dagster_university/dagster_and_etl/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
     "dagster-dlt",
     "dagster-sling",
     "psycopg2-binary",
-    "dlt[duckdb]",
+    "dlt[duckdb,parquet]",
     "pandas",
     "azure-storage-blob>=12.26.0",
     "requests>=2.32.5",
